--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
                 // Set text font and size
                 doc.setFont('Helvetica', 'bold');
-                doc.setFontSize(18);
+                doc.setFontSize(30);
+                doc.setTextColor(255, 255, 255); // white text
 
                 // Position the teacher name (adjust X, Y to match your image layout)
                 doc.text(`Teacher: ${teacher}`, 60, 700);
