--- a/index.html
+++ b/index.html
@@ -1,4 +1,33 @@
-<script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <title>HALL PASS Generator</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        input {
+            margin-bottom: 10px;
+            padding: 5px;
+            font-size: 14px;
+        }
+        button {
+            padding: 10px 15px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <h2>HALL PASS Generator</h2>
+    <label>Teacher Name: <input type="text" id="teacher" value="Krystill Esmedaiana" /></label><br />
+    <label>Section Name: <input type="text" id="section" value="12 GAS A" /></label><br />
+    <button onclick="generatePDF()">Generate PDF</button>
+
+    <script>
     async function generatePDF() {
         const { jsPDF } = window.jspdf;
         const doc = new jsPDF({
@@ -43,3 +72,6 @@
         };
     }
 </script>
+
+</body>
+</html>
