--- a/index.html
+++ b/index.html
@@ -3,45 +3,80 @@
 <head>
   <meta charset="UTF-8" />
   <title>HALL PASS Generator</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
-    input, label {
-      display: block;
-      margin-bottom: 10px;
-      font-size: 14px;
-    }
-    input[type="text"] {
-      padding: 5px;
-      width: 300px;
-    }
-    button {
-      padding: 10px 15px;
-      font-size: 16px;
-      cursor: pointer;
-      margin-bottom: 20px;
-    }
     canvas {
       border: 1px solid #ccc;
-      display: block;
-      margin-top: 10px;
+      width: 100%;
+      height: auto;
+    }
+    @media (min-width: 768px) {
+      #previewCanvas {
+        max-width: 595px;
+      }
     }
   </style>
 </head>
-<body>
-  <h2>HALL PASS Generator</h2>
+<body class="bg-light">
+  <div class="container py-4">
+    <h2 class="text-center mb-4">HALL PASS Generator</h2>
 
-  <label>Teacher Name: <input type="text" id="teacher" value="Krystill Esmediana" oninput="updatePreview()" /></label>
-  <label>Section Name: <input type="text" id="section" value="12 GAS A" oninput="updatePreview()" /></label>
-  <label><input type="checkbox" id="bgToggle" onchange="updatePreview()" /> Use green background instead of pink</label>
+    <div class="row g-4">
+      <!-- Form Section -->
+      <div class="col-md-6">
+        <div class="card border-primary">
+          <div class="card-body">
+            <form>
+              <div class="mb-3">
+                <label for="teacher" class="form-label">Teacher Name</label>
+                <input
+                  type="text"
+                  id="teacher"
+                  class="form-control"
+                  value="Krystill Esmediana"
+                  oninput="updatePreview()"
+                />
+              </div>
+              <div class="mb-3">
+                <label for="section" class="form-label">Section Name</label>
+                <input
+                  type="text"
+                  id="section"
+                  class="form-control"
+                  value="12 GAS A"
+                  oninput="updatePreview()"
+                />
+              </div>
+              <div class="form-check mb-3">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  id="bgToggle"
+                  onchange="updatePreview()"
+                />
+                <label class="form-check-label" for="bgToggle">
+                  Use green background instead of pink
+                </label>
+              </div>
+              <button type="button" class="btn btn-primary w-100" onclick="generatePDF()">Generate PDF</button>
+            </form>
+          </div>
+        </div>
+      </div>
 
-  <button onclick="generatePDF()">Generate PDF</button>
-
-  <h3>Live Preview:</h3>
-  <canvas id="previewCanvas" width="595" height="842"></canvas>
+      <!-- Preview Section -->
+      <div class="col-md-6 text-center">
+        <h5>Live Preview:</h5>
+        <canvas id="previewCanvas" width="595" height="842"></canvas>
+      </div>
+    </div>
+  </div>
 
   <script>
     const canvas = document.getElementById("previewCanvas");
@@ -49,18 +84,13 @@
 
     let bgPink = new Image();
     let bgGreen = new Image();
-    bgPink.src = "hall-pass-bg-a.png";   // Pink background
-    bgGreen.src = "hall-pass-bg-b.png";  // Green background
-
-    let bgLoaded = { pink: false, green: false };
+    bgPink.src = "hall-pass-bg-a.png";
+    bgGreen.src = "hall-pass-bg-b.png";
 
     bgPink.onload = () => {
-      bgLoaded.pink = true;
       updatePreview();
     };
-
     bgGreen.onload = () => {
-      bgLoaded.green = true;
       updatePreview();
     };
 
@@ -71,7 +101,6 @@
     function updatePreview() {
       const currentBg = getCurrentBackground();
 
-      // Only draw if image is ready
       if (!currentBg.complete) return;
 
       ctx.clearRect(0, 0, canvas.width, canvas.height);
@@ -83,10 +112,10 @@
       ctx.fillStyle = "white";
       ctx.textAlign = "center";
 
-      ctx.font = "bold 70px Helvetica"; // Section
+      ctx.font = "bold 78px Helvetica";
       ctx.fillText(section, canvas.width / 2, 740);
 
-      ctx.font = "bold 28px Helvetica"; // Teacher
+      ctx.font = "bold 28px Helvetica";
       ctx.fillText(teacher, canvas.width / 2, 780);
     }
 
@@ -98,7 +127,7 @@
       const doc = new jsPDF({
         orientation: "portrait",
         unit: "px",
-        format: [pdfWidth, pdfHeight]
+        format: [pdfWidth, pdfHeight],
       });
 
       const imgData = canvas.toDataURL("image/png");
