--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
   <title>HALL PASS Generator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
   <style>
     canvas {
@@ -33,37 +30,63 @@
         <div class="card border-primary">
           <div class="card-body">
             <form>
+              <!-- Teacher Name -->
               <div class="mb-3">
-                <label for="teacher" class="form-label">Teacher Name</label>
-                <input
-                  type="text"
-                  id="teacher"
-                  class="form-control"
-                  value="Krystill Esmediana"
-                  oninput="updatePreview()"
-                />
+                <label class="form-label">Teacher Name</label>
+                <input type="text" id="teacher" class="form-control" value="Krystill Esmediana" oninput="updatePreview()" />
               </div>
+
+              <!-- Grade Level -->
               <div class="mb-3">
-                <label for="section" class="form-label">Section Name</label>
-                <input
-                  type="text"
-                  id="section"
-                  class="form-control"
-                  value="12 GAS A"
-                  oninput="updatePreview()"
-                />
+                <label class="form-label">Grade Level</label><br />
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="gradeLevel" id="grade11" value="11" checked onchange="updatePreview()" />
+                  <label class="form-check-label" for="grade11">11</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="gradeLevel" id="grade12" value="12" onchange="updatePreview()" />
+                  <label class="form-check-label" for="grade12">12</label>
+                </div>
               </div>
-              <div class="form-check mb-3">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  id="bgToggle"
-                  onchange="updatePreview()"
-                />
-                <label class="form-check-label" for="bgToggle">
-                  Use green background instead of pink
-                </label>
+
+              <!-- Strand -->
+              <div class="mb-3">
+                <label class="form-label">Strand</label><br />
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="strand" id="gas" value="GAS" checked onchange="updatePreview()" />
+                  <label class="form-check-label" for="gas">GAS</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="strand" id="humss" value="HUMSS" onchange="updatePreview()" />
+                  <label class="form-check-label" for="humss">HUMSS</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input" type="radio" name="strand" id="abm" value="ABM" onchange="updatePreview()" />
+                  <label class="form-check-label" for="abm">ABM</label>
+                </div>
               </div>
+
+              <!-- Section -->
+              <div class="mb-3">
+                <label class="form-label">Section</label><br />
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input section-radio" type="radio" name="section" id="sectionA" value="A" checked onchange="updatePreview()" />
+                  <label class="form-check-label" for="sectionA">A</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input section-radio" type="radio" name="section" id="sectionB" value="B" onchange="updatePreview()" />
+                  <label class="form-check-label" for="sectionB">B</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input section-radio" type="radio" name="section" id="sectionC" value="C" onchange="updatePreview()" />
+                  <label class="form-check-label" for="sectionC">C</label>
+                </div>
+                <div class="form-check form-check-inline">
+                  <input class="form-check-input section-radio" type="radio" name="section" id="sectionD" value="D" onchange="updatePreview()" />
+                  <label class="form-check-label" for="sectionD">D</label>
+                </div>
+              </div>
+
               <button type="button" class="btn btn-primary w-100" onclick="generatePDF()">Generate PDF</button>
             </form>
           </div>
@@ -82,40 +105,54 @@
     const canvas = document.getElementById("previewCanvas");
     const ctx = canvas.getContext("2d");
 
-    let bgPink = new Image();
-    let bgGreen = new Image();
-    bgPink.src = "hall-pass-bg-a.png";
-    bgGreen.src = "hall-pass-bg-b.png";
+    const bgPink = new Image();
+    const bgGreen = new Image();
+    bgPink.src = "hall-pass-bg-a.png"; // Grade 12
+    bgGreen.src = "hall-pass-bg-b.png"; // Grade 11
 
-    bgPink.onload = () => {
-      updatePreview();
-    };
-    bgGreen.onload = () => {
-      updatePreview();
-    };
+    bgPink.onload = bgGreen.onload = () => updatePreview();
 
-    function getCurrentBackground() {
-      return document.getElementById("bgToggle").checked ? bgGreen : bgPink;
+    function getSelectedValue(name) {
+      const radios = document.getElementsByName(name);
+      for (let radio of radios) {
+        if (radio.checked) return radio.value;
+      }
+      return "";
     }
 
     function updatePreview() {
-      const currentBg = getCurrentBackground();
-
-      if (!currentBg.complete) return;
-
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      ctx.drawImage(currentBg, 0, 0, canvas.width, canvas.height);
-
       const teacher = document.getElementById("teacher").value;
-      const section = document.getElementById("section").value;
+      const grade = getSelectedValue("gradeLevel");
+      const strand = getSelectedValue("strand");
+      const section = getSelectedValue("section");
+
+      // Handle background switch
+      const background = grade === "12" ? bgPink : bgGreen;
+
+      // Disable section if ABM is selected
+      const sectionRadios = document.querySelectorAll(".section-radio");
+      const disableSection = strand === "ABM";
+      sectionRadios.forEach(r => {
+        r.disabled = disableSection;
+        if (disableSection) r.checked = false;
+      });
+
+      // Construct label (no section if ABM)
+      const sectionLabel = strand === "ABM" ? "" : ` ${section}`;
+      const label = `${grade} - ${strand}${sectionLabel}`;
+
+      // Draw to canvas
+      if (!background.complete) return;
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      ctx.drawImage(background, 0, 0, canvas.width, canvas.height);
 
       ctx.fillStyle = "white";
       ctx.textAlign = "center";
 
-      ctx.font = "bold 78px Helvetica";
-      ctx.fillText(section, canvas.width / 2, 740);
+      ctx.font = "bold 78px Helvetica"; // Section label
+      ctx.fillText(label, canvas.width / 2, 740);
 
-      ctx.font = "bold 28px Helvetica";
+      ctx.font = "bold 28px Helvetica"; // Teacher name
       ctx.fillText(teacher, canvas.width / 2, 780);
     }
 
