--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body class="bg-light d-flex flex-column min-vh-100">
 
   <div class="container py-4">
-    <h2 class="text-center mb-4">HALL PASS Generator</h2>
+    <h2 class="text-center mb-4">DON GERARDO HALL PASS Generator</h2>
 
     <div class="row g-4">
       <!-- Form Section -->
@@ -33,8 +33,8 @@
             <form>
               <!-- Teacher Name -->
               <div class="mb-3">
-                <label class="form-label">Teacher Name</label>
-                <input type="text" id="teacher" class="form-control" value="Krystill Esmediana" oninput="updatePreview()" />
+                <label class="form-label">Adviser's Name</label>
+                <input type="text" id="teacher" class="form-control" placeholder="Enter Adviser Name" oninput="updatePreview()" />
               </div>
 
               <!-- Grade Level -->
